2.0.25
======
- Updated CalculateScoresTask to allow specification of patient heights file in
  CSV format. Heights must be specified in meters.

2.0.24
======
- Added ApplyThresholdToSegmentationsTask for adjusting segmentation masks based
  on image HU thresholds. This is particularly useful to remove edema from muscle
  segmentations.
- Updated CreatePngsFromSegmentationsTaskPanel to allow setting of low/high HU
  threshold for myosteatosis map, as well as alpha
- Updated DefaultPipeline to also set low/high HU threshold and alpha for the 
  myosteatosis maps

2.0.23
======
- Implemented Numpy to NIFTI and NIFTI to Numpy conversion task so the segmentation
  output can be edited outside Mosamatic, e.g., using ITK-SNAP
  
2.0.22
======
- Implemented SliceSelectionViewer with sagittal view check and copy

2.0.21
======
- Implemented LiverSegmentVisualization using VTK

2.0.20
======
- Added myosteatosis PNG map to CreatePngsFromSegmentationsTask

2.0.19
======
- Fixed bug in PyTorch segmentation task for T4 images

2.0.18
======
- DefaultDockerPipeline has Docker image version field (default: 2.0.10)

2.0.17
======
- Added LiverAnalysisPipeline

2.0.16
======
- SliceViewer has configurable default color window and level with reset button

2.0.15
======
- DefaultDockerPipeline and BoaDockerPipeline check for paths containing spaces.
  These are not Docker compatible.
  
2.0.14
======
- Added TotalSegmentatorTask (with script for installing educational license)

2.0.13
======
- Added BoaDockerPipeline

2.0.12
======
- Updated Dicom2NiftiTask to process multiple DICOM series

2.0.11
======
- Added DefaultDockerPipeline